# PWBS

./: .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  APPROACH.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  ORCHESTRATION.md  PRD-SPEC.md  README.md  ROADMAP.md  _b2.txt  _b2a.txt  _batch1_err.txt  _check.py  _check2.py  _claim.py  _create_env.py  _debug.py  _diag2.txt  _fail_lines.txt  _fix_b904.py  _info.py  _promote.py  _ready.py  _results.txt  _unit.txt  _virt.txt  docker-compose.yml  full_test.txt  full_test2.txt  tasks.md  test_output.txt  test_output2.txt  vision-wissens-os.md
backend/: .test-last-debug.txt  .test_all.txt  .test_skel.txt  Dockerfile  Dockerfile.dev  _b1.txt  _check_health.py  _check_wh.py  _gen_postman.py  _import_test.txt  _imports.txt  _openapi_check.py  _openapi_check2.py  _openapi_spec.json  _pyproject_patch.diff  _pytest_run.py  _quick_import.txt  _test_result.txt  _unit.txt  _unit2.txt  _unit3_out.txt  alembic.ini  openapi_current.json  pyproject.toml  t.ps1  test_collect.txt  test_output.txt  test_results.txt  test_run.txt
backend/_deferred/: README.md
backend/_deferred/billing/: __init__.py  service.py
backend/_deferred/connectors/: google_docs.py
backend/_deferred/marketplace/: cli.py  marketplace_service.py  plugin_registry.py  plugin_sdk.py  sandbox.py
backend/_deferred/rbac/: checker.py
backend/_deferred/routes/: billing.py  developer.py  marketplace.py  rbac.py  sso.py
backend/_deferred/sso/: config.py
backend/_deferred/teams/: service.py
backend/_deferred/tests/: 0015_add_plugins.py  test_gmail.py
backend/benchmarks/: run_search_benchmark.py  search_eval_dataset.py
backend/benchmarks/results/: search-quality-2026-03-18.json
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  0002_add_data_exports.py  0003_add_decisions.py  0004_add_user_deletion_scheduled_at.py  0005_add_subscriptions.py  0006_add_user_profiles.py  0007_add_slack_user_mappings.py  0008_add_connector_consents.py  0009_add_briefing_feedback.py  0010_add_feature_flags.py  0011_add_llm_audit_log.py  0012_add_organizations.py  0013_add_reminders.py  0014_add_api_keys.py  0015_add_email_briefing_fields.py  0016_add_waitlist.py  0017_add_vertical_profile.py  0018_add_referrals.py  0019_add_assumptions.py  0019_add_feedbacks.py  0020_add_sync_runs.py  0021_add_search_enhancements.py  0022_add_user_settings_columns.py  0023_add_briefing_preferences.py  0024_email_primary_briefing_channel.py  0025_add_feedbacks.py  0026_add_refresh_tokens.py  0027_add_org_id_cols.py  0028_sync_orm_to_db.py  0029_add_onboarding_state.py
backend/pwbs/: __init__.py
backend/pwbs/analytics/: assumption_tracker.py  work_patterns.py
backend/pwbs/api/: main.py
backend/pwbs/audit/: __init__.py  audit_service.py
backend/pwbs/billing/: __init__.py  service.py
backend/pwbs/briefing/: context.py  generator.py  meeting_context.py  persistence.py  project_context.py  quarterly_context.py  validation.py  vertical_profiles.py  weekly_context.py
backend/pwbs/cli/: __init__.py  __main__.py  seed.py
backend/pwbs/connectors/: __init__.py  base.py  gmail.py  google_calendar.py  normalizer.py  notion.py  oauth.py  obsidian.py  outlook.py  registry.py  resilience.py  slack.py  zoom.py
backend/pwbs/core/: __init__.py  cache.py  config.py  exceptions.py  grounding.py  llm_gateway.py  logging.py  metrics.py  posthog.py  rate_limiter.py  retry.py  sentry.py  structured_output.py
backend/pwbs/db/: neo4j_client.py  postgres.py  redis_client.py  weaviate_client.py
backend/pwbs/developer/: api_key_service.py
backend/pwbs/dsgvo/: deletion_service.py  export_service.py
backend/pwbs/export/: __init__.py  schemas.py  strategies.py
backend/pwbs/feature_flags/: __init__.py  service.py
backend/pwbs/graph/: builder.py  edge_weights.py  pattern_recognition.py  query_service.py
backend/pwbs/ingestion/: __init__.py  pipeline.py
backend/pwbs/insights/: generator.py  persistence.py
backend/pwbs/marketplace/: __init__.py  cli.py  marketplace_service.py  plugin_registry.py  plugin_sdk.py  sandbox.py
backend/pwbs/models/: __init__.py  api_key.py  assumption.py  audit_log.py  base.py  briefing.py  briefing_feedback.py  chunk.py  connection.py  connector_consent.py  data_export.py  decision.py  document.py  entity.py  feature_flag.py  feedback.py  llm_audit_log.py  organization.py  plugin.py  proactive_insight.py  referral.py  refresh_token.py  reminder.py  saved_search.py  scheduled_job_run.py  search_history.py  slack_user_mapping.py  subscription.py  sync_run.py  user.py  user_profile.py  waitlist.py  webhook.py
backend/pwbs/processing/: chunking.py  embedding.py  embedding_pipeline.py  entity_dedup.py  llm_ner.py  ner.py  semantic_chunker.py  strategy_resolver.py
backend/pwbs/prompts/: __init__.py  briefing_morning.v1.j2  briefing_morning.v2.j2  briefing_project.v1.j2  briefing_quarterly.v1.j2  briefing_weekly.v1.j2  registry.py
backend/pwbs/queue/: __init__.py  celery_app.py  config.py  health.py
backend/pwbs/rbac/: __init__.py  checker.py  dependencies.py  permissions.py
backend/pwbs/reminders/: service.py
backend/pwbs/scheduler/: __init__.py
backend/pwbs/schemas/: __init__.py  briefing.py  common.py  connector.py  document.py  enums.py  knowledge.py  search.py
backend/pwbs/scripts/: init_neo4j.py  init_weaviate.py
backend/pwbs/search/: enrichment.py  evaluation.py  hybrid.py  keyword.py  reranker.py  service.py
backend/pwbs/services/: auth.py  email.py  llm_cache.py  user.py  webhook_outbound.py
backend/pwbs/snapshots/: __init__.py  models.py  schemas.py  service.py
backend/pwbs/sso/: config.py  oidc_handler.py  saml_handler.py  service.py
backend/pwbs/storage/: weaviate.py
backend/pwbs/teams/: service.py
backend/pwbs/verticals/: __init__.py  profiles.py
backend/pwbs/workflows/: __init__.py  (+3 more)
backend/scripts/: export_openapi.py  validate_openapi.py
backend/tests/: conftest.py
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
(+592 files in other folders)
