[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwbs"
version = "0.1.0"
description = "Persoenliches Wissens-Betriebssystem (PWBS)  Backend"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.4",
    "aiosmtplib>=3.0.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "tiktoken>=0.7.0",
    "watchdog>=6.0.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "openapi-spec-validator>=0.7.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "testcontainers[postgres,weaviate,neo4j]>=4.0.0",
    "fakeredis[lua]>=2.26.0",
    "respx>=0.22.0",
    "locust>=2.20.0",
]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.57.0",
]
vector = [
    "weaviate-client>=4.10.0",
    "sentence-transformers>=3.3.0",
]
graph = [
    "neo4j>=5.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pwbs"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pwbs"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# --tb=short: kompakte Tracebacks; -q: kein Fortschrittsbalken-Spam;
# --junit-xml: strukturiertes Ergebnis immer verfügbar (wird von CI + t.ps1 gelesen)
addopts = "--tb=short -q --no-header --junit-xml=.test-results.xml --timeout=30"
markers = [
    "unit: marks pure unit tests (no external deps)",
    "integration: marks tests requiring running databases",
    "e2e: marks end-to-end tests",
    "perf: marks performance benchmark tests",
]
