[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwbs"
version = "0.1.0"
description = "Personal Knowledge Operating System (PWBS) – Backend"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "posthog>=3.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.12.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.4",
    "aiosmtplib>=3.0.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "tiktoken>=0.7.0",
    "watchdog>=6.0.0",
    "python-frontmatter>=1.1.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "openapi-spec-validator>=0.7.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "testcontainers[postgres,weaviate,neo4j]>=4.0.0",
    "fakeredis[lua]>=2.26.0",
    "respx>=0.22.0",
    "locust>=2.20.0",
]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.57.0",
]
vector = [
    "weaviate-client>=4.10.0",
    "sentence-transformers>=3.3.0",
]
graph = [
    "neo4j>=5.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pwbs"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["_deferred"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "RUF"]
ignore = [
    # FastAPI Depends() als Default-Argument ist idiomatisch korrekt
    "B008",
    # Deutschsprachige Unicode-Zeichen (ä, ö, ü) in Strings/Docstrings/Kommentaren sind gewollt
    "RUF001", "RUF002", "RUF003",
    # Unsafe-only Fixes – ignoriert bis manueller Review
    "UP042",   # replace-str-enum
    "F841",    # unused-variable
    "RUF059",  # unused-unpacked-variable
    "B905",    # zip-without-explicit-strict
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "RUF005",  # collection-literal-concatenation
    "SIM105",  # suppressible-exception (contextlib.suppress)
    "UP046",   # non-pep695-generic-class
]

[tool.ruff.lint.per-file-ignores]
# Seed-Daten haben lange Demo-Strings - absichtlich ignorieren
"pwbs/cli/seed.py" = ["E501"]
# Scripts können flexiblere Formatierung haben
"pwbs/scripts/*.py" = ["E501"]
# Tests: verwenden `type` als Parameter (Connector-Tests), verschachtelte with-Statements,
# MockClass-Variablen (Uppercase), breite Exception-Tests, späte Imports, Einbuchstaben-Vars
"tests/**/*.py" = ["A002", "B017", "N806", "E741", "E402", "SIM117", "SIM102", "B007", "RUF012", "E501"]
# Connectors-Route verwendet `type` als Query-Parameter (public API)
"pwbs/api/v1/routes/connectors.py" = ["A002"]

[tool.ruff.lint.isort]
known-first-party = ["pwbs"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# --tb=short: kompakte Tracebacks; -q: kein Fortschrittsbalken-Spam;
# --junit-xml: strukturiertes Ergebnis immer verfügbar (wird von CI + t.ps1 gelesen)
addopts = "--tb=short -q --no-header --junit-xml=.test-results.xml --timeout=30"
markers = [
    "unit: marks pure unit tests (no external deps)",
    "integration: marks tests requiring running databases",
    "e2e: marks end-to-end tests",
    "perf: marks performance benchmark tests",
]
